--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,2 +1,3 @@
-project_name: 'kaggle-cmi'
-entity: 'Akira Yasuda'
+project_name: 'kaggle_cmi' 
+entity: 'akira-ysd0889' 
+run_name: 'baseline_experiment' 
