--- a/config/parameters.yaml
+++ b/config/parameters.yaml
@@ -1,11 +1,15 @@
-# config/parameters.yaml
-project_name: 'kaggle_cmi' 
-entity: 'akira-ysd0889' 
-run_name: 'baseline_experiment' 
-
+project_name: 'kaggle_cmi'
+entity: 'akira-ysd0889'
+run_name: 'baseline_experiment'
 
 seed: 42
 n_splits: 5
+
+models:
+  - 'LightGBM'
+  - 'XGBoost'
+  - 'CatBoost'
+  - 'TabNet'
 
 lgb_params:
   learning_rate: 0.046
@@ -17,9 +21,7 @@ lgb_params:
   bagging_freq: 4
   lambda_l1: 10
   lambda_l2: 0.01
-  #device: 'gpu'
   random_state: 42
-
 
 xgb_params:
   learning_rate: 0.05
@@ -30,8 +32,6 @@ xgb_params:
   reg_alpha: 1
   reg_lambda: 5
   random_state: 42
-  #tree_method: 'gpu_hist'
-
 
 cat_params:
   learning_rate: 0.05
@@ -40,8 +40,6 @@ cat_params:
   random_seed: 42
   verbose: 0
   l2_leaf_reg: 10
-  #task_type: 'GPU'
-
 
 tabnet_params:
   n_d: 64
@@ -62,5 +60,4 @@ tabnet_params:
     min_lr: 1e-5
     factor: 0.5
   scheduler_fn: 'ReduceLROnPlateau'
-  verbose: 1
-  device_name: 'cuda'
+  verbose: 0
